# market

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
analytics/: admin.py  apps.py  models.py  signals.py
authorize/: admin.py  consumer.py  exceptions.py  filters.py  middelwars.py  models.py  router.py  serializers.py  urls.py  utils.py  views.py
authorize/migrations/: 0001_initial.py  0002_alter_user_country_code.py  0003_auto_20240831_1712.py
authorize/test/: test_login.py  test_register_user.py  test_send_otp.py  test_user_list.py  test_verify_phone.py
core/: admin.py  filterset.py  permissions.py  signals.py  tasks.py  urls.py
core/design_pattern/: __init__.py  cart.py
core/models/: __init__.py  attribute.py  cart.py  cart_item.py  category.py  mixins.py  order.py  product.py  variant.py
core/serializers/: __init__.py  attribute.py  cart.py  cart_item.py  category.py  payment.py  product.py  variant.py
core/tests/: test_cart.py  test_category.py  test_product.py  test_variant.py
core/views/: __init__.py  attribute.py  cart.py  category.py  mixins.py  orders.py  payment.py  product.py  variant.py
market/: Dockerfile  asgi.py  authentication_ws.py  docker-compose-prod.yml  env.prod  exceptions.py  helpers.py  middleware.py  pagination.py  requirements.txt  schema.py  settings.py  urls.py  utility.py  utils.py
market/admins/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
market/celery/: base.py  celery.py
market/chat/: admin.py  consumers.py  models.py  permissions.py  urls.py  (+2 more)
(+32 files in other folders)
