[tool.poetry]
name = "markett"
version = "0.0.1"
description = ""
authors = ["parisa <parisafarivash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pytest-django = "^4.9.0"
pyotp = "^2.9.0"
twilio = "^9.2.4"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
sentry-sdk = "^2.17.0"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
ipython = "^8.29.0"
django-contrib-postgres = "^0.0.1"
celery = "^5.4.0"
rabbitmq-server = "^0.0.1"
redis = "^5.2.0"
ujson = "^5.10.0"

[tool.poetry.group.dev.dependencies]
djangorestframework = "^3.15.2"
Django = "^5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
